<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StockAlarm</string>
    <string name="code_hint">输入股票代码查询</string>
    <string name="search">查询</string>
    <string name="search_content">查询结果</string>
    <string name="search_error_null">未查到结果,请修改代码后重试!</string>
    <string name="menu_settings">设置</string>
    <string name="menu_stock">股票管理</string>
    <string name="menu_alarm">提醒设置</string>
    <string name="menu_quit">退出</string>
    <string name="alert_confirm">确定</string>
    <string name="alert_cancel">取消</string>
    <string name="alert_confirm_quit">确认退出吗？</string>
    <string name="alert_msg_quit">再按一次退出程序</string>
    
    <string name="code">代码</string>
    <string name="name">名称</string>
    <string name="percent">百分比</string>
    <string name="money">金额</string>
    <string name="market">市场</string>
    <string name="price">当前价</string>
    <string name="updown">涨跌</string>
    
    <string name="add">添加</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    
    <string name="hint_code">输入六位代码</string>
    <string name="hint_percent">输入百分比,保留两位小数</string>
    <string name="hint_money">输入金额,保留两位小数</string>
    
    <string name="invalid_percent">百分比格式不正确</string>
    <string name="invalid_money">金额格式不正确</string>
    <string name="empty_code">请输入代码</string>
    <string name="invalid_code">未查到结果,请修改代码后重试!</string>
    <string name="repeat_code">该股票已存在,请修改代码后重试!</string>
    
    <string name="title_activity_stock_manager">关注股管理</string>
    <string name="title_activity_alarm_manager">提醒设置</string>

    <string name="alarm_title">提醒, # 超过提醒值.</string>
    <string name="alarm_content_down">您关注的股票 # 跌幅 #,下跌 # 元,现价 # 元.</string>
    <string name="alarm_content_up">您关注的股票 # 涨幅 #,上涨 # 元,现价 # 元.</string>

</resources>
