<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/codeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/code_hint" 
        android:imeOptions="actionSearch" />

    <TextView
        android:id="@+id/contentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/codeText"
        android:layout_below="@+id/searchButton"
        android:layout_marginTop="25dp"
        android:hint="@string/search_content"
        android:singleLine="false" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/codeText"
        android:layout_alignBottom="@+id/codeText"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/codeText"
        android:text="@string/search" />

    <ListView
        android:id="@+id/stockList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contentText"
        android:layout_below="@+id/contentText"
        android:layout_marginTop="31dp"
        android:divider="#000"
        android:dividerHeight="1px" >

    </ListView>

</RelativeLayout>
