<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StockManagerActivity" >

    <Button 
        android:id="@+id/sm_add_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_alignParentRight="true"
        android:textSize="12sp"
        android:text="@string/add"/>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_below="@+id/sm_add_button"
        android:layout_height="0.5dp"
        android:background="#000000"
        android:visibility="visible"/>
    
    <RelativeLayout 
        android:id="@+id/sm_header"
        android:layout_below="@+id/sm_add_button"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:orientation="vertical" >
	    
		<TextView 
	        android:id="@+id/sm_header_code_text"
	        android:layout_width="70dp"
	        android:layout_height="fill_parent"
	        android:text="@string/code"
	        android:layout_gravity="center_vertical|left"
	        android:gravity="center_vertical|left" />
	    
	    <View
	        android:id="@+id/sm_header_line2"
	        android:layout_width="0.5dp"
	        android:layout_toRightOf="@+id/sm_header_code_text"
	        android:layout_height="fill_parent"
	        android:background="#000000"
	        android:visibility="visible" />
		
	    <TextView
	        android:id="@+id/sm_header_name_text"
	        android:layout_toRightOf="@+id/sm_header_line2"
	        android:layout_width="90dp"
	        android:layout_height="fill_parent"
	        android:text="@string/name"
	        android:layout_gravity="center_vertical|left"
	        android:gravity="center_vertical|left" />
	        
		<View
	        android:id="@+id/sm_header_line3"
	        android:layout_width="0.5dp"
	        android:layout_toRightOf="@+id/sm_header_name_text"
	        android:layout_height="fill_parent"
	        android:background="#000000"
	        android:visibility="visible" />
	
	    <TextView 
	        android:id="@+id/sm_header_delete"
	        android:layout_toRightOf="@+id/sm_header_line3"
	        android:layout_width="60dp"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center_vertical|left"
	        android:gravity="center_vertical|left"
	        android:text="@string/delete"/>
	    
	</RelativeLayout>
	    
    <View
        android:id="@+id/sm_header_line"
        android:layout_width="fill_parent"
        android:layout_below="@+id/sm_header"
        android:layout_height="0.5dp"
        android:background="#000000"
        android:visibility="visible" />
    
    <ListView
        android:id="@+id/stockManageList"
        android:layout_below="@+id/sm_header_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#000"
        android:dividerHeight="1px" />

</RelativeLayout>
